# pmd-smart-storage

./: .gitignore  AGENTS.md  FACTORY_RESET_GUIDE.md  FACTORY_RESET_IMPLEMENTATION.md  README.md  WEB_UI_MESH_DETAILS.md  build-endpoint.ps1  check-model-bindings.ps1  docker-compose.yml  package.json  rebuild-all.ps1  reset-provisioning.ps1  run-test.cmd  test-factory-reset.ps1  test-led.ps1
.github/workflows/: smoke-test.yml
backend/server/: .dockerignore  .env.example  Dockerfile  README.md  package.json
docs/: README.md
docs/deployment/: DOCKER_DEPLOYMENT.md  PORTAINER_DEPLOYMENT.md
docs/firmware/: esp-idf-setup.md
docs/guides/: MESH_STORAGE_GUIDE.md  QUICK_RESET_GUIDE.md  QUICK_START.md  SYSTEM_V2_MIGRATION.md  V2_IMPLEMENTATION_GUIDE.md  V2_PO_REQUIREMENT.md
docs/hardware/: bom.md  setup.md
docs/mqtt/: README.md  mosquitto-setup.md  mosquitto.conf  restart-mosquitto.ps1  setup-mosquitto.ps1  test-mqtt.ps1
docs/provisioning/: guide.md
docs/reference/: BLE_MESH_STORAGE.md  DASHBOARD_DRAG_DROP.md  GPIO5_BUTTON_WIRING.md  MESH_STORAGE_SUMMARY.md  UI_STYLE_GUIDE.md
docs/testing/: TEST_FACTORY_RESET.md  (+2 more)
firmware/: BLE_MESH_SUMMARY.md
firmware/gateway-node/main/: CMakeLists.txt  dns_server.c  dns_server.h  idf_component.yml  index.html  main.c  main_backup.c  main_old.c  mesh_storage.c  mesh_storage.h  web_server.c  web_server.h  web_ui.h  wifi_manager.c  wifi_manager.h
frontend/: .dockerignore  AGENTS.md  Dockerfile  README.md  nginx.conf  package.json  tailwind.config.js  tsconfig.docker.json  vite.config.ts
scripts/: README.md
(+112 files in other folders)
